# stock_price_prediction

./: .gitignore  README.md  pyproject.toml
data/raw/: reliance_stock_data.csv
notebook/: EDA.py
notebook/EDA/: EDA.py  data_collection.py
notebook/plt/: plot.py
